--- a/imdb/templates/imdb/movie_list.html
+++ b/imdb/templates/imdb/movie_list.html
@@ -1,1 +1,32 @@
-<h1>Test list movie</h1>
+{% extends 'base.html' %}
+
+{% block body %}
+<main class="content">
+	<section class="centered">
+		<div class="movies">
+			{% for movie in object_list %}
+			<div class="mov">
+				<a href="single.html">
+					<img alt="{{movie.judul_movie}}" height="300" src="{{movie.poster_movie}}" width="200">
+					<h2 class="movietitle">{{movie.judul_movie}}</h2>
+				</a>
+			</div>
+			{% endfor %}
+
+		</div>
+		<nav class="pagination">
+			<ul>
+				<li><a href="#">Prev</a></li>
+				<li><a href="#">1</a></li>
+				<li><a href="#" class="menuactive">2</a></li>
+				<li><a href="#">3</a></li>
+				<li><a href="#">...</a></li>
+				<li><a href="#">20</a></li>
+				<li><a href="#">21</a></li>
+				<li><a href="#">Next</a></li>
+			</ul>
+		</nav>
+	</section>
+
+</main>
+{% endblock body %}
