--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
 	<div class="wrapper">
 
 		<header class="header">
-			<figure class="logo"><a href="index.html"><img src="img/logo.png" alt="Logo"></figure></a>
+			<figure class="logo"><a href=""><img src="{% static 'img/logo.png' %}" alt="Logo"></figure></a>
 			<nav class="menu">
 				<ul>
 					<li><a href="index.html">Home</a></li>
