--- a/imdb/templates/imdb/movie_detail.html
+++ b/imdb/templates/imdb/movie_detail.html
@@ -1,15 +1,7 @@
 {% extends 'base.html' %}
 {% block body %}
-<main class="content">
+<!-- <main class="content">
 	<div class="single">
-
-		<section class="trailer">
-			<h3>Trailer</h3>
-			<div class="trailer_frame">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/x73-573aWfs" frameborder="0"
-					allowfullscreen></iframe>
-			</div>
-		</section>
 
 		<section class="movie">
 			<img alt="{{movie.judul_movie}}" height="300" src="{{movie.poster_movie}}" width="200">
@@ -19,9 +11,54 @@
 				<li><a href="genre.html">Adventure</a>, <a href="genre.html">Drama</a>, <a href="genre.html">Romance</a>
 				</li>
 				<li><a href="cast.html">Gary Oldman</a>, <a href="cast.html">Asa Butterfield</a></li>
-				<li><h1>Star {{object.rating_movie}}</h1>/10 ({{object.vote_movie}})</li>
+				<li>
+					<h1>Star {{object.rating_movie}}</h1>/10 ({{object.vote_movie}})
+				</li>
 			</ul>
 		</section>
+
+	</div>
+</main> -->
+
+<main class="content">
+	<div class="single">
+		<section class="block-movie-content">
+			<div class="movie-image">
+				<img src="{{movie.poster_movie}}">
+			</div>
+			<div class="content">
+				<a class="td" href="#">{{movie}}<span class="movie-year"> ({{movie.tahun_movie}})</span> </a>
+				<p class="text-muted">
+					<span class="runtime">{{movie.durasi_movie}}</span>
+					<span class="ghost">|</span>
+					<span class="genre">Crime, Drama</span>
+				</p>
+				<div class="rating" style="color: yellow; font-size: 30px; padding: 5px;">9.3*</div>
+				<p class="text-muted-2">
+					{{movie.deskripsi_movie}}
+				</p>
+				<p class="caster">
+					Director:
+					{% for director in director_list %}
+						<a class="cast" href="#">{{director.id_name}}</a>,
+					{% endfor %}
+					<span class="ghost"></span>
+					Star:
+					{% for cast in cast_list %}
+						<a class="cast" href="#">{{cast.id_name}}</a>,
+					{% endfor %}
+
+				</p>
+				<p class="votes-visible">
+					<span class="vts">Votes:</span>
+					<span name="nv" data-value="223871">{{movie.vote_movie}}</span>
+					<span class="ghost">|</span>
+					<span class="vts">Gross:</span>
+					<span name="nv" data-value="{{movie.gross_movie}}">${{movie.gross_movie}}</span>
+				</p>
+			</div>
+		</section>
+
 		<section class="links">
 			<h3>Links</h3>
 			<ul class="dlinks">
@@ -38,35 +75,12 @@
 			</ul>
 		</section>
 
-		<section class="related">
-			<h3>Related movies</h3>
-			<div class="relatemovie">
-				<a href="#"><img src="images/2.jpg"></a>
-				<a href="#"><span class="relatedname">John Wick</span></a>
+		<section class="trailer">
+			<h3>Trailer</h3>
+			<div class="trailer_frame">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/sY1S34973zA" frameborder="0"
+					allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+					allowfullscreen></iframe>
 			</div>
-			<div class="relatemovie">
-				<a href="#"><img src="images/3.jpg"></a>
-				<a href="#"><span class="relatedname">Spider Man Homecoming</span></a>
-			</div>
-			<div class="relatemovie">
-				<a href="#"><img src="images/4.jpg"></a>
-				<a href="#"><span class="relatedname">Beauty and Beast</span></a>
-			</div>
-			<div class="relatemovie">
-				<a href="#"><img src="images/5.jpg"></a>
-				<a href="#"><span class="relatedname">Pirates of the Caribbean: Dead Men Tell No Tales</span></a>
-			</div>
-			<div class="relatemovie">
-				<a href="#"><img src="images/6.jpg"></a>
-				<a href="#"><span class="relatedname">Fifty Shades Darker</span></a>
-			</div>
-			<div class="relatemovie">
-				<a href="#"><img src="images/7.jpg"></a>
-				<a href="#"><span class="relatedname">Transformers</span></a>
-			</div>
-
 		</section>
-		
-	</div>
-</main>
-{% endblock body %}
+		{% endblock body %}
