--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -144,6 +144,145 @@ body{font-family: arial,sans-serif; background-color: #191919; position: relativ
 #myForm input[type='submit']{float: left; width: 100%; padding: 10px 10px; margin-bottom: 20px; margin-top: 20px; color:#fff; border:none; background-color: #c22026; outline:none; cursor: pointer;}
 .success{float:left; width: 100%; margin:20px 0; text-align: center; background-color: #8BC34A; color:#fff; padding: 10px 0;}
 .error{float:left; width: 100%; margin:20px 0; text-align: center; background-color: #F44336; color:#fff; padding: 10px 0;}
+.title-block{
+	display: block;
+	border-bottom: 1px solid silver;
+}
+
+.title-bar{
+	box-sizing: border-box;
+	display: block;
+}
+
+.title-wrapper{
+	min-height: 58px;
+	margin-left: 52px;
+}
+
+.title-wrapper h1{
+	font: 36px Arial,sans-serif;
+    font-weight: normal;
+    line-height: 110%;
+    margin: 0px;
+    color: #fff;
+    padding-bottom: 3px;
+}
+
+.rating-wrapper{
+	float: right;
+    position: relative;
+    margin-left: 5px;
+    width: 185px;
+	z-index: 2;
+	display: block;
+	top: 30px;
+	left: 0;
+	right: 0;
+}
+
+.titleBar{
+	position: relative;
+	padding: 0 20px;
+}
+
+.sub-text{
+	font-size: 11px;
+	color: silver;
+	margin-left: 65px;
+}
+.ghost{
+	margin: 0 .5em;
+	font-style: normal;
+	color: #888888;
+	margin-bottom: 5px;
+}
+
+.movie-image img{
+	width: 400px;
+	height: 600px;
+}
+.sub-text a{
+	color: silver;
+	padding-bottom: 3px;
+}
+.sub-text a:visited{
+	text-decoration: none;
+}
+
+.sub-text a:link{
+	text-decoration: none;
+}
+
+.block-movie-content{
+	font-size: 11px;
+	padding: 15px 20px;
+	background-color: #202020;
+	display: flex;
+	justify-self: start;
+}
+
+.movie-image{
+	display: inline-block;
+	vertical-align: top;
+	margin-right: 20px;
+
+}
+.td{
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 33px;
+	text-decoration: none;
+	color: white;
+}
+
+.movie-year{
+	color: yellow;
+}
+
+.runtime{
+	color: silver;
+}
+
+.genre{
+	color: silver;
+}
+
+.text-muted-2{
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 20px;
+	color: silver;
+	margin: 0.5em 0 0.75em;
+    line-height: 140%;
+	padding: 0;
+	display: block;
+	box-sizing: border-box;
+}
+
+.caster{
+	color: silver;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: normal;
+	font-size: 20px;
+}
+
+.cast{
+	text-decoration: none;
+	color: greenyellow;
+}
+
+.cast:hover{
+	text-decoration: underline;
+	color: aqua;
+}
+
+.votes-visible{
+	color: silver;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: normal;
+	font-size: 20px;
+	margin-top: 20px;
+}
+
+
 
 @media all and (max-width: 1024px){
 	.toggle{display: block;}
