--- a/imdb/templates/imdb/movie_detail.html
+++ b/imdb/templates/imdb/movie_detail.html
@@ -33,7 +33,7 @@
 					<span class="ghost">|</span>
 					<span class="genre">Crime, Drama</span>
 				</p>
-				<div class="rating" style="color: yellow; font-size: 30px; padding: 5px;">9.3*</div>
+				<div class="rating" style="color: yellow; font-size: 30px; padding: 5px;">{{movie.rating_movie}}</div>
 				<p class="text-muted-2">
 					{{movie.deskripsi_movie}}
 				</p>
