--- a/imdb/templates/imdb/movie_list.html
+++ b/imdb/templates/imdb/movie_list.html
@@ -7,8 +7,8 @@
 			{% for movie in object_list %}
 			<div class="mov">
 				<a href="">
-					<img alt="{{movie.judul_movie}}" height="300" src="{{movie.poster_movie}}" width="200">
-					<h2 class="movietitle">{{movie.judul_movie}}</h2>
+					<img alt="{{movie.title_movie}}" height="300" src="{{movie.poster_movie}}" width="200">
+					<h2 class="movietitle">{{movie.title_movie}}</h2>
 				</a>
 			</div>
 			{% endfor %}
