--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -173,7 +173,6 @@ body{font-family: arial,sans-serif; background-color: #191919; position: relativ
 }
 
 .rating{
-	cursor: pointer;
 	color: #f5f5f5d6;
 	font-size: 30px;
 	margin-top: 15px;
@@ -217,7 +216,11 @@ body{font-family: arial,sans-serif; background-color: #191919; position: relativ
 }
 
 .movie-year{
-	color: yellow;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 30px;
+	letter-spacing: 1.5px;
+	margin-left: 2px;
+	color: #cddc61;
 }
 
 .runtime{
