--- a/templates/base.html
+++ b/templates/base.html
@@ -43,10 +43,10 @@
 					</li>
 					<li><a>Year</a>
 						<ul>
+							<li><a href="year.html">2020</a></li>
+							<li><a href="year.html">2019</a></li>
+							<li><a href="year.html">2018</a></li>
 							<li><a href="year.html">2017</a></li>
-							<li><a href="year.html">2016</a></li>
-							<li><a href="year.html">2015</a></li>
-							<li><a href="year.html">2014</a></li>
 						</ul>
 					</li>
 				</ul>
@@ -56,7 +56,7 @@
 				<input type="submit" value="" class="searchsubmit">
 			</form>
 
-			<div class="toggle"><img src="img/menu.svg"></div>
+			<div class="toggle"><img src="{% static 'img/menu.svg' %} "></div>
 		</header>
 
 		{% block body %}
@@ -74,8 +74,8 @@
 			<div class="tags">
 				<ul>
 					<li>Watch Free Movies Trailers</li>
-					<li>RUNE films Pro</li>
-					<li>Donate for Rune Flims </li>
+					<li>RUNE Films Pro</li>
+					<li>Donate for Rune Team </li>
 					<li>Latest Movies Trailers</li>
 					<li>New Movies Trailers</li>
 
