--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,8 @@
 			</div>
 			<div class="donate" style="margin-bottom: 20px;">
 				<h1 style="color: red;">DONATE:</h1>
-				<h2 style="color: aliceblue;">AgriBank: 391848926492432  -  Momo: 0387005857  -  Donate Skin in game: VS Yi </h2>
+				<h2 style="color: aliceblue;">Momo: 0358144758  -  Donate Skin in game: bachhs </h2>
+				<h2 style="color: aliceblue;">Momo: 0387005857  -  Donate Skin in game: VS Yi </h2>
 			</div>
 		</footer>
 
