--- a/templates/base.html
+++ b/templates/base.html
@@ -15,14 +15,6 @@
 
 	<script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
 	<script src="{% static 'js/script.js' %}"></script>
-
-
-	<!-- Demo styles -->
-	<style>
-
-
-
-	</style>
 </head>
 
 <body>
@@ -64,6 +56,7 @@
 		{% endblock body %}
 
 		<footer class="footer">
+			<div class="copyright" style="color: silver;"><p>Copyright &copy 2020 by RUNE Team</p></div>
 			<div class="footermenu">
 				<ul>
 					<li><a href="index.html">Home</a></li>
