--- a/imdb/templates/imdb/movie_list.html
+++ b/imdb/templates/imdb/movie_list.html
@@ -1,6 +1,46 @@
 {% extends 'base.html' %}
 
 {% block body %}
+
+<div class="homeslider">
+	<div class="swiper-container">
+		<div class="swiper-wrapper">
+			<div class="swiper-slide">
+				<img src="/static/img/998470.jpg">
+				<div class="caption">
+					<div class="captioninside">
+						<h2 style="font-family: sans-serif; margin-bottom: 5px;">Avenger: End Game</h3>
+						<p>The Last War</p>
+						<a href="single.html" class="playbutton">Play</a>
+					</div>
+				</div>
+			</div>
+			<div class="swiper-slide">
+				<img src="/static/img/909185.jpg">
+				<div class="caption">
+					<div class="captioninside">
+						<h3 style="font-family: sans-serif;">Avenger: Infinity War</h3>
+						<p>Trùm</p>
+						<a href="single.html" class="playbutton">Play</a>
+					</div>
+				</div>
+			</div>
+			<div class="swiper-slide">
+				<img src="/static/img/1913795.jpg">
+				<div class="caption">
+					<div class="captioninside">
+						<h3>Parasite</h3>
+						<p>Kí Sinh Trùng</p>
+						<a href="single.html" class="playbutton">Play</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- Add Pagination -->
+		<div class="swiper-pagination"></div>
+	</div>
+</div>
+
 <main class="content">
 	<section class="centered">
 		<div class="movies">
