--- a/imdb/templates/imdb/movie_list.html
+++ b/imdb/templates/imdb/movie_list.html
@@ -11,7 +11,7 @@
 					<div class="captioninside">
 						<h2 style="font-family: sans-serif; margin-bottom: 5px;">Avenger: End Game</h3>
 						<p>The Last War</p>
-						<a href="single.html" class="playbutton">Play</a>
+						<a href="#" class="playbutton">View Details</a>
 					</div>
 				</div>
 			</div>
