--- a/templates/base.html
+++ b/templates/base.html
@@ -71,11 +71,13 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="contact.html">Contact</a></li>
+					<li><a href="cookie.html">Cookie</a></li>
 				</ul>
 			</div>
 			<div class="tags">
 				<ul>
 					<li>Watch Free Movies Trailers</li>
+					<li>Movies Details</li>
 					<li>RUNE Films Pro</li>
 					<li>Latest Movies Trailers</li>
 					<li>New Movies Trailers</li>
