--- a/imdb/templates/imdb/movie_detail.html
+++ b/imdb/templates/imdb/movie_detail.html
@@ -45,8 +45,8 @@
 			</div>
 		</section>
 
-		<section class="trailer" style="margin-bottom: 20px;">
-			<h3>Trailer</h3>
+		<section class="trailer">
+			<h3 style="color: yellow;">Trailer</h3>
 			<div class="trailer_frame">
 				<iframe width="560" height="315" src="{{movie.trailer_movie}}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
@@ -56,7 +56,7 @@
 			<h3 style="color: yellow; padding-left: 20px;">Bình luận về phim</h3>
 			<div id="fb-root"></div>
 			<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v7.0&appId=252464779146967&autoLogAppEvents=1"></script>
-			<div class="fb-comments" data-colorscheme="dark" data-href="https://uetimdb.herokuapp.com/movie/{{movie.id_movie}}" data-numposts="5" data-width=""></div>		
+			<div class="fb-comments" data-colorscheme="dark" data-href="https://uetimdb.herokuapp.com/movie/{{movie.id_movie}}" data-numposts="5" data-width="100%"></div>		
 		</section>
 	</div>
 </main>>
