update search and url

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 	<div class="wrapper">
 
 		<header class="header">
-			<figure class="logo"><a href="">
+			<figure class="logo"><a href="{% url 'imdb:movie_list' %}">
 					<h2>R U N E FILMS</h2>
 			</figure></a>
 			<nav class="menu">
