--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
 			</figure></a>
 			<nav class="menu">
 				<ul>
-					<li><a href="index.html">Home</a></li>
+					<li><a href="#">Home</a></li>
 					<li><a>Genres</a>
 						<ul>
 							<li><a href="genre.html">Action</a></li>
