--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -273,7 +273,12 @@ body{font-family: arial,sans-serif; background-color: #191919; position: relativ
 	
 }
 
-
+.biofull{
+	color: #f5f5f5d6;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: normal;
+	font-size: 12px;
+}
 
 @media all and (max-width: 1024px){
 	.toggle{display: block;}
