--- a/templates/base.html
+++ b/templates/base.html
@@ -76,9 +76,9 @@
 			</div>
 			<div class="footermenu">
 				<ul>
-					<li><a href="{% url 'imdb:movie_list' %}">Home</a></li>
-					<li><a href="contact.html">Contact</a></li>
-					<li><a href="cookie.html">Cookie</a></li>
+					<li><a href="{% url 'imdb:movie_list' %}" title="Back to Homepage">Home</a></li>
+					<li><a href="https://www.facebook.com/bachhs" title="Send email feedback for 18020193@vnu.edu.vn">Contact</a></li>
+					<li><a href="https://www.facebook.com/Alpabulous" title="Customer Service: 18020400@vnu.edu.vn">Cookie</a></li>
 				</ul>
 			</div>
 			<div class="tags">
@@ -88,7 +88,6 @@
 					<li>RUNE Films Pro</li>
 					<li>Latest Movies Trailers</li>
 					<li>New Movies Trailers</li>
-
 				</ul>
 			</div>
 		</footer>
