--- a/imdb/templates/imdb/movie_detail.html
+++ b/imdb/templates/imdb/movie_detail.html
@@ -27,13 +27,13 @@
 				<p class="caster">
 					Director:
 					{% for director in director_list %}
-					<a class="cast" href="{% url 'imdb:name_detail' director.id_name.id_name %}"
+					<a class="cast" href="{% url 'imdb:name_detail' director.id_name.id_name %}" title="Watch detailed {{director.id_name}}"
 						target="_blank">{{director.id_name}}</a>,
 					{% endfor %}
 					<br> <br>
 					Star:
 					{% for cast in cast_list %}
-					<a class="cast" href="{% url 'imdb:name_detail' cast.id_name.id_name %}"
+					<a class="cast" href="{% url 'imdb:name_detail' cast.id_name.id_name %}" title="Watch detailed {{cast.id_name}}"
 						target="_blank">{{cast.id_name}}</a>,
 					{% endfor %}
 
