--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
 						</form>
 					</li>
 					<li>
-						<a href="{% url 'admin:index' %}" title="Admin Login" ><i class="fas fa-user-circle" style="color: silver; font-size: 25px; float: left; position: absolute; margin-left: 950px;"></i></a>
+						<a class="admin" href="{% url 'admin:index' %}" title="Admin Login" ><i class="fas fa-user-circle" ></i></a>
 					</li>
 					
 				</ul>
@@ -71,13 +71,17 @@
 		{% endblock body %}
 
 		<footer class="footer">
-			<div class="copyright" style="color: silver;">
-				<p>Copyright &copy 2020 by RUNE Team</p>
+			<div class="iconfooter">
+				<a href="https://www.facebook.com/zuck" target="_blank"><i class="fab fa-facebook-square"></i></a>
+				<a href="https://www.instagram.com/cristiano/?hl=vi" target="_blank"><i class="fab fa-instagram-square"></i></a>
+				<a href="https://twitter.com/potus" target="_blank"><i class="fab fa-twitter"></i></a>
+				<a href="https://www.youtube.com/channel/UC-lHJZR3Gqxm24_Vd_AJ5Yw" target="_blank"><i class="fab fa-youtube"></i></a>
+				<a href="https://github.com/bachhs/uetimdb" target="_blank"><i class="fab fa-github"></i></a>
 			</div>
 			<div class="footermenu">
 				<ul>
 					<li><a href="{% url 'imdb:movie_list' %}" title="Back to Homepage">Home</a></li>
-					<li><a href="https://www.facebook.com/bachhs" title="Send email feedback for 18020193@vnu.edu.vn">Contact</a></li>
+					<li><a href="https://www.facebook.com/bachhs" title="Send email feedback to 18020193@vnu.edu.vn">Contact</a></li>
 					<li><a href="https://www.facebook.com/Alpabulous" title="Customer Service: 18020400@vnu.edu.vn">Cookie</a></li>
 				</ul>
 			</div>
@@ -89,6 +93,9 @@
 					<li>Latest Movies Trailers</li>
 					<li>New Movies Trailers</li>
 				</ul>
+			</div>
+			<div class="copyright" style="color: silver;">
+				<p>Copyright &copy 2020 by RUNE Team</p>
 			</div>
 		</footer>
 
